# pg_sql_parser_tests

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  Earthfile  LICENSE  Makefile  README.md  docker-compose.yaml  go.mod  go.sum  schema.sql
.github/workflows/: scrape.yaml
fixtures/alter_default_privileges/: revoke_in_schema.sql
fixtures/alter_index/: set_option_reindex.sql  tablespace.sql
fixtures/alter_materialized_view/: rename.sql
fixtures/alter_procedure/: owner.sql  rename.sql  reset_search_path.sql  set_schema.sql
fixtures/alter_publication/: set_options.sql
fixtures/alter_role/: add_permissions.sql  valid_until.sql
fixtures/alter_rule/: rename.sql
fixtures/alter_server/: version.sql
fixtures/alter_subscription/: disable.sql  set_publication.sql
fixtures/alter_system/: reset.sql
fixtures/alter_table/: add_pkey.sql  add_unique_constraint.sql  attach_partition.sql  attach_partition_for_range.sql  attach_partition_for_values.sql  attach_partition_with_values.sql  column_drop_not_null.sql  fkey.sql  fkey_not_valid_validate.sql  one_column_multi_set_default.sql  only_drop_constraint.sql  set_not_null.sql
fixtures/alter_tablespace/: owner.sql  rename.sql
fixtures/alter_trigger/: depends.sql
fixtures/alter_tsdictionary/: dummy.sql  options.sql
fixtures/alter_type/: add_value_after.sql  rename.sql  rename_value.sql  (+1 more)
scripts/: gather_corpus_dir.sh  iter.sh  link.sh  merge.sh  parse_all.sh  postgres_src_dl.sh  split_sqlite_tests.sh  sqlite_dl.sh
scripts/splitter/: Cargo.toml
scripts/splitter/src/: main.rs  sqlite.rs
(+6710 files in other folders)
