[package]
name = "splitter"
version = "0.1.0"
authors = ["Steven Kalt <kalt.steven@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
psql_splitter = { git = "https://github.com/SKalt/psql_splitter.git" }
pg_query_wrapper = { git = "https://github.com/SKalt/pg_query_wrapper.git" }
clap = "2.33.3"
regex = "1.5.4"
xxhash-rust = { version = "0.8.2", features = ["xxh3"] }
rusqlite = "0.26.1"
indicatif = "0.16.2"
tar = "0.4.37"
url = "2.2.2"
lazy_static = "1.4.0"
nom = "7.1.0"

# required for cargo chef
[[bin]]
name = "splitter"
path = "./src/main.rs"
